# nginx_admin

./: .babelrc  Cargo.toml  README.md  output.txt  package-lock.json  package.json  tasks.md  webpack.config.js
client/: app.js  index.js
src/: main.rs
src/controllers/: nginx.rs
src/routes/: dashboard.rs  domains.rs  index.rs  mod.rs  nginx.rs
static/js/: index.js  main.js
templates/: base.html.tera
templates/components/: dashboard_heading.html.tera  editor.html.tera
templates/pages/: dashboard.html.tera
templates/sections/: header.html.tera
