[package]
name = "nginx_admin"
version = "0.1.0"
authors = ["RustyRocket"]
edition = "2021"
[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"
random-string = "1.0.0"
env_logger = "0.10.0"
local-ip-address = "0.5.0"
futures = "0.3.23"
tera = "1.17.1"
reqwest = "0.11"
rocket_dyn_templates = {version = "0.1.0-rc.2", features = ["tera"]}
tarpc = "0.31.0"
ssr_rs = "0.2.3"


[dependencies.sqlx]
version = "0.5"
default-features = false
features = ["macros", "offline", "migrate"]

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["sqlx_sqlite"]

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["tls", "json",]
